# stm32h743-http

./: .dir-locals.el  .gdbinit  Cargo.toml  Embed.toml  memory.x  openocd.cfg  request.rs  shell.nix
.cargo/: config
src/: cdc_ecm.rs  hd44780_i2c.rs  http_server.rs  index.html  index.html.br  main.rs  response_builder.rs  veth.rs
